# workos

./: .pre-commit-config.yaml  Cargo.toml  deny.toml  package-lock.json
.github/workflows/: ci.yml  publish.yml  release.yml
src/: user_management.rs  workos.rs
src/core/: types.rs
src/core/types/: remote_jwk_set.rs
src/sso/operations/: get_authorization_url.rs
src/user_management/: cookie_session.rs  operations.rs  types.rs
src/user_management/operations/: authenticate_with_email_verification.rs  authenticate_with_organization_selection.rs  authenticate_with_session_cookie.rs  create_organization_membership.rs  get_authorization_url.rs  get_logout_url.rs  list_sessions.rs  resend_invitation.rs  revoke_session.rs
src/user_management/types/: authenticate_session_response.rs  authentication_response.rs  impersonator.rs  locale.rs  refresh_session_response.rs  session_cookie_data.rs
