[package]
name = "workos"
version = "0.7.0"
description = "Rust SDK for interacting with the WorkOS API."
repository = "https://github.com/RustForWeb/workos"
authors = ["Rust for Web <info@rustforweb.org>", "WorkOS"]
license = "MIT"
edition = "2024"

[features]
default = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls"]

[dependencies]
aead = { version = "0.5.2", features = ["std"] }
aes-gcm = "0.10.3"
async-trait = "0.1.88"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["deref", "display", "from"] }
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
querystring = "1.1.0"
reqwest = { version = "0.13.0", default-features = false, features = [
    # Exclude `default-tls` from default features
    "charset",
    "http2",
    "form",
    "json",
    "query",
    "system-proxy",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.0"
url = { version = "2.5.4", features = ["serde"] }
urlencoding = "2.1.3"

[dev-dependencies]
matches = "0.1.10"
mockito = "1.0.0"
rsa = "0.9.8"
tokio = { version = "1.44.2", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
